# SSIE-501-BlackBox

./: .gitignore  AGENTS.md  NEW_GRAPHS_DOCUMENTATION.md  README.md  label_colors.json  pyproject.toml
config/: masks.json
src/bbx/: __init__.py  __main__.py  aggregate.py  analyze.py  animate.py  best_k.py  collect.py  entropy.py  export.py  fractions.py  generate_grid.py  gof.py  gridmaps.py  maskgen.py  metrics.py  mi.py  process.py  rbxplore.py  regionize.py  stationarity.py  utils.py  viz.py
